--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8728,7 +8728,7 @@ span {
   -webkit-transition-delay: 0.3s;
   background-color: #000000;
   opacity: 0.7;
-  cursor: url(../../assets/img/close.png), auto;
+  cursor: url(../../assets/img/close.avif), auto;
 }
 
 @media (max-width: 767px) {
@@ -9419,7 +9419,7 @@ span {
   width: 100%;
   height: 100%;
   content: "";
-  background: linear-gradient(180deg, rgba(255, 8, 8, 0.5) 0%, rgba(11, 14, 19, 0.5) 100%), url(../../assets/img/home-3/service/shape.png);
+  background: linear-gradient(180deg, rgba(255, 8, 8, 0.5) 0%, rgba(11, 14, 19, 0.5) 100%), url(../../assets/img/home-3/service/shape.avif);
   opacity: 0;
   visibility: hidden;
   transition: all 0.4s ease-in-out;
